Fixed issue intro section being too long and text could not be centered

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   --clr-primary: #1fe9ff;
   --clr-secondary: #040720;
   --shadow: 0px 0px 6px var(--clr-primary);
+  --header-height: 100px
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -9,24 +10,32 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 body { 
-  /* border: 1px solid whitesmoke; */
+  position: relative;
+  flex-direction: column;
   color: white;
   background-color: var(--clr-secondary); 
 }
 
 section {
+  
+  /* border: 1px solid white; */
   width: min(90%, 2400px);
-  min-height: 95vh;
+  /* min-height: 100vh; */
   margin-inline: auto;
 }
 
 
 header, ul {
+  
   display: flex;
 }
 
 header {
-  padding: min(3vw, 2rem);
+  position: relative;
+  top:16px;
+  height: 100px;
+  width: 90%;
+  margin-inline: auto;
 }
 nav {
   margin-left: auto;
@@ -73,32 +82,24 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: min(10vw, 100px);
-  height: min(10vw, 100px);
+  width: min(10vw,70px);
+  height: min(10vw, 70px);
   box-shadow: 0px 0px 6px var(--clr-primary);
   transform: rotate(45deg);
 }
 
 .logo > h1 {
-  font-size: min(7vw, 4rem);
+  font-size: min(7vw, 3rem);
   color: var(--clr-primary);
   transform: rotate(-45deg);
 }
-
 .introduction {
-  /* height: calc(100vh - 3vw); */
-  /*Removes the header dimensions */
-  /* display: flex;
-  justify-content: center; 
-  align-items: center; */
-  /* display: flex;
-  align-items: center; */
-  display: flex
+  height: calc(100vh - 100px);
+  display: flex;
+  align-items: center;
 }
 .wrapper {
   margin-inline: auto;
-  margin-top: max(9vw, 100px);
-
 }
 .wrapper > :nth-child(1) {
   color: var(--clr-primary);
@@ -119,8 +120,6 @@ a {
   width: max(60vw, 30ch)
 }
 .work {
-  aspect-ratio: 1 / .8;
-  /* width: min(90%, 2400px); */
   margin-inline: auto;
 }
 
@@ -129,7 +128,6 @@ a {
   grid-template-columns: repeat(auto-fit, minmax(clamp(280px, 25vw, 600px), 1fr));
   align-items: center; 
   gap: min(2vh, 32px)  min(4vw, 64px);
-  
 }
 
 .card {
@@ -181,13 +179,11 @@ a {
 
 .contact-wrapper {
   display: flex;
-  
-  padding: 5vh 5vw;
 }
 
 .info {
   align-self: center;
-  width: 40%;
+  width :min(400px, 100%);
 }
 
 .info > * {
@@ -202,13 +198,12 @@ a {
 }
 .contact-logo > .logo {
   font-size: 10rem;
-  min-width: 400px;
-  min-height: 400px;
+  /* min-width: 400px;
+  min-height: 400px; */
 }
 .contact-icons {
   margin-right: 16px;
-  width: 50px;
-  height: 50px;
+  width: min(10vw, 60px);
   cursor: pointer;
 }
 .contact-icon-text {
@@ -254,4 +249,7 @@ a {
     margin-inline: auto;
   }
 
+  .contact-wrapper {
+    flex-direction: column-reverse;
+  }
 }
